--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "homepage": "https://github.com/vikashraj144/express-mongodb-chai-mocha#readme",
   "devDependencies": {
     "chai": "^4.1.2",
-    "chai-http": "^4.0.0"
+    "chai-http": "^4.0.0",
+    "mocha": "^5.0.5"
+  },
+  "dependencies": {
   }
 }
