--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vikashraj144/express-mongodb-chai-mocha.git"
+    "url": "https://github.com/vikashraj144/express-mongodb-chai-mocha.git"
   },
   "keywords": [
     "node",
