--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "book",
   "main": "server.js",
   "scripts": {
-    "start": "SET NODE_ENV=dev && node server.js",
+    "start": "node server.js",
     "test": "mocha --timeout 10000"
   },
   "repository": {
